results/SVCOMP/4-shot/log-ExSymExe1-2024_03_18_16_46_27.txt
class ExSymExe1 {
    //@ requires true;
    //@ ensures \result ==> (z > 0 && x > 0);
    //@ ensures \result ==> (\exists int z; z > 0);
    //@ ensures \result ==> (\exists int x; x > 0);
    //@ ensures !\result ==> (z <= 0 || x <= 0);
    public boolean test(int x, int z) {
        System.out.println("Testing ExSymExe1");
        x = z++;
        if (z > 0) System.out.println("branch FOO1");
        else {
            System.out.println("branch FOO2");
            return false;
        }
        if (x > 0) System.out.println("branch BOO1");
        else {
            System.out.println("branch BOO2");
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe1.java:4: error: variable z is already defined in method test(int,int)
    //@ ensures \result ==> (\exists int z; z > 0);
                                         ^
/home/max/Documents/JMLGPT/tmp/ExSymExe1.java:5: error: variable x is already defined in method test(int,int)
    //@ ensures \result ==> (\exists int x; x > 0);
                                         ^
2 errors

